[gd_scene load_steps=3 format=3 uid="uid://cia55wsd65k16"]

[ext_resource type="Texture2D" uid="uid://ciklupqe75jf5" path="res://CardTextures/card_check.png" id="1_7t3xo"]
[ext_resource type="Script" path="res://CardMinigame/Card.gd" id="1_wrjox"]

[node name="Card" type="Node2D"]
script = ExtResource("1_wrjox")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_7t3xo")

[node name="Collider" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = -72.0
offset_top = -100.0
offset_right = 72.0
offset_bottom = 100.0

[connection signal="button_down" from="Collider" to="." method="_on_collider_button_down"]
[connection signal="mouse_entered" from="Collider" to="." method="_on_collider_mouse_entered"]
[connection signal="mouse_exited" from="Collider" to="." method="_on_collider_mouse_exited"]
